# video-lora-training

./: CMakeLists.txt  README.md  README2.md  requirements.txt  setup.sh
include/: video_pipeline.h
python/: captioning.py  process_video.py
src/: bindings.cpp  main.cpp  video_pipeline.cpp
tests/: video_pipeline.test.cpp
